objects/X7S_Onboarding_Setting__mdt/X7S_Onboarding_Setting__mdt.object-meta.xml
<CustomObject>
    <label>7S Onboarding Setting</label>
    <pluralLabel>7S Onboarding Settings</pluralLabel>
</CustomObject>