objects/X7S_Onboarding_Setting__mdt/fields/Community_ID__c.field-meta.xml
<CustomField>
    <fullName>Community_ID__c</fullName>
    <label>Community ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>