objects/X7S_Onboarding_Setting__mdt/fields/Enable_Onboarding_via_Modal__c.field-meta.xml
<CustomField>
    <fullName>Enable_Onboarding_via_Modal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Onboarding via Modal</label>
    <type>Checkbox</type>
</CustomField>