objects/X7S_Onboarding_Setting__mdt/fields/Modal_Display_Limit__c.field-meta.xml
<CustomField>
    <fullName>Modal_Display_Limit__c</fullName>
    <description>Maximum number of times the application will display when modal is enabled.</description>
    <label>Modal Display Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>