objects/X7S_Onboarding_Setting__mdt/fields/Modal_Display_Limit_Exception__c.field-meta.xml
<CustomField>
    <fullName>Modal_Display_Limit_Exception__c</fullName>
    <defaultValue>&quot;System Administrator&quot;</defaultValue>
    <description>Comma-separated list of profiles that are exempt from the modal display limit.</description>
    <label>Modal Display Limit Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>