objects/X7S_Onboarding_Setting__mdt/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <description>The Terms and Conditions that will displayed on the welcome screen</description>
    <label>Terms and Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>