objects/X7S_Onboarding_Setting__mdt/fields/Test_Profile__c.field-meta.xml
<CustomField>
    <fullName>Test_Profile__c</fullName>
    <label>Test Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>