objects/X7S_Onboarding_Setting__mdt/fields/Track_Follow_Topic__c.field-meta.xml
<CustomField>
    <fullName>Track_Follow_Topic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to track follow Topic activity</inlineHelpText>
    <label>Track Follow Topic</label>
    <type>Checkbox</type>
</CustomField>