objects/X7S_Onboarding_Setting__mdt/fields/Track_Join_Group__c.field-meta.xml
<CustomField>
    <fullName>Track_Join_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to track the Join group activity</inlineHelpText>
    <label>Track Join Group</label>
    <type>Checkbox</type>
</CustomField>