objects/X7S_Onboarding_Setting__mdt/fields/Track_Leave_Group__c.field-meta.xml
<CustomField>
    <fullName>Track_Leave_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to track Leave Group activity</inlineHelpText>
    <label>Track Leave Group</label>
    <type>Checkbox</type>
</CustomField>